--- a/views/page/dashboard.phtml
+++ b/views/page/dashboard.phtml
@@ -1,3 +1,53 @@
-<div>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="asset/css/style.css">
+</head>
+<body>
     
-</div>
+</body>
+</html>
+<h2>Bienvenue sur l'espace Administrateur</h2>
+
+<!-- <form action="" method="post">
+    <fieldset>
+    <legend>
+        Ajoutes les plats que tu souhaites!
+    </legend>
+    <label for="plat">Nom du Plat:</label>
+    <input type="text" name="plat" id="plat"><br><br>
+
+    <label for="prix">Prix:</label>
+    <input type="text" name="prix" id="prix"><br><br>
+
+    <button type="submit">Enregistrer</button><br><br>
+
+    </fieldset>
+</form> -->
+
+
+
+<form action="" method="post">
+    <fieldset>
+        <legend>
+            Ajout de lien
+        </legend>
+    </fieldset>
+    <label for="LinksName">LinksName:</label>
+    <input type="text" name="LinksName" id="Linksname"><br><br>
+
+    <label for="navGoto">navGoto:</label>
+    <input type="text" name="navGoto" id="navGoto"><br><br>
+
+    <label for="navTarget">navTarget:</label>
+    <input type="text" name="navTarget" id="navTarget"><br><br>
+
+    <label for="UserRole">UserRole:</label>
+    <input type="text" name="UserRole" id="UserRole" ><br><br>
+
+    <button type="submit">Envoyer</button><br><br>
+</form>
