--- a/views/page/liste.phtml
+++ b/views/page/liste.phtml
@@ -15,7 +15,7 @@
                     <tr>
                         <td><?= $num++ ?></td>
                         <td><?= $values['Nom'] ?></td>
-                        <td><?= $values['Prenoms'] ?></td>
+                        <td><?= $values['Prenom'] ?></td>
                         <td><?= $values['Identifiant'] ?></td>
                         <td><button style="background-color:gray; color:white;"><a href="index.php?goto=user&target=update&id=<?= $values['Id'] ?>">Edit</a></button></td>
                         <td><button style="background-color:brown; color:white;"><a href="index.php?goto=user&target=destroy&id=<?= $values['Id'] ?>">Delete</a></button></td>
