--- a/views/main.phtml
+++ b/views/main.phtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="asset/css/bootstrap.min.css">
     <link rel="stylesheet" href="asset/css/bootstrap-grid.min.css">
+    <!-- <link rel="stylesheet" href="asset/css/style4.css"> -->
 </head>
 
 <body>
